--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 html,
 body {
-  padding: 0;
+	background: rgba(248, 248, 252, 1) ;
+  padding: 15px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	color: rgba(88, 80, 107, 1);
 }
 
 a {
