--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
 	background: rgba(248, 248, 252, 1) ;
@@ -17,4 +21,26 @@ a {
 
 .box-shadow {
 	box-shadow: 0px 8px 20px rgba(197, 166, 236, 0.05);
+}
+
+.divider {
+	border: 1px solid #FAF9FD;
+}
+
+.header__section {
+	display: flex;
+	justify-content: space-between;
+}
+
+.header__section__subtitle {
+	margin: 0;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.header__section__img {
+	width: 16.67px;
+	height: 20.31px;
 }
