--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,3 +44,21 @@ a {
 	width: 16.67px;
 	height: 20.31px;
 }
+
+.header__section__status {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 3px 10px;
+	background: #E4FFEE;
+	border: 0.5px solid #41CF69;
+	box-sizing: border-box;
+	border-radius: 10px;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 10px;
+	line-height: 14px;
+	text-align: center;
+	letter-spacing: -0.03em;
+	color: #41CF69;
+}
