--- a/components/blog/Blog.module.css
+++ b/components/blog/Blog.module.css
@@ -1,7 +1,7 @@
 .blog {
 	display: flex;
 	flex-direction: column;
-	@apply bg-white rounded-2xl p-5 mb-10;
+	@apply bg-white rounded-2xl p-5;
 	box-shadow: 0px 8px 20px rgba(197, 166, 236, 0.05);
 }
 
