--- a/components/menu/Menu.module.css
+++ b/components/menu/Menu.module.css
@@ -2,9 +2,9 @@
 	background: #FFFFFF;
 	border-radius: 16px;
 	display: flex;
+	justify-content: center;
   height: 60px;
   position: fixed;
-  width: calc(100% - 60px);
   padding : 15px;
   top: 90%;
 }
@@ -12,5 +12,28 @@
 .menu > img {
 	max-width: 100%;
 	height: 41px;
-	width: calc(100% - 10px);
+}
+
+@media (min-width: 1199.98px) {
+	.menu {
+		width: calc(100% - 84rem);
+	}
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+  .menu {
+		width: calc(100% - 4rem);
+	}
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+  .menu {
+		width: calc(100% - 4rem);
+	}
+}
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+	.menu {
+		width: calc(100% - 4rem);
+	}
 }
