--- a/components/saving/Saving.module.css
+++ b/components/saving/Saving.module.css
@@ -8,8 +8,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-end;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
+	border-radius: 20px;
 }
 
 .saving__play {
@@ -28,7 +27,7 @@
 	font-style: normal;
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
-
+	width: 100%;
 }
 
 .saving__caption > h2 {
