--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,25 @@
 .container {
   min-height: 100vh;
 }
+
+.main {
+	display: grid;
+}
+
+@media (min-width: 1199.98px) {
+	.main {
+		grid-template-columns: 40rem 1fr 40rem;
+	}
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+  .main {
+		grid-template-columns: 1rem 1fr 1rem;
+	}
+}
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+	.main {
+		grid-template-columns: 0px 1fr 0px ;
+	}
+}
